# vetra_backend

./: .coverage  .env.example  README.md  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: b12bf73de9b2_create_user_and_refresh_token_table.py
src/: main.py
src/account/: deps.py  email.py  exceptions.py  models.py  repositories.py  routers.py  schemas.py  services.py  utils.py
src/db/: config.py  models.py  settings.py
tests/: conftest.py  test_db.py  test_main.py
tests/account/: test_admin.py  test_change_password.py  test_deps.py  test_login.py  test_logout.py  test_me.py  test_refresh.py  test_register.py  test_repositories.py  test_reset_password.py  test_send_email_verification.py  test_send_password_reset_email.py  test_unit.py  test_verify_email.py
